--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-    </style>
-    
 <body>
     <button class="lang-switch" onclick="toggleLanguage()">
         <span class="en">عربي</span>
@@ -71,7 +67,7 @@
                 <div class="project-card">
                     <div class="project-image" style="background-color: #2a2a2a;">
                         <video autoplay loop muted playsinline class="project-video">
-                            <source src="Sahm_preview.mp4" type="video/mp4">
+                            <source src="Sahm_Preview.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
