--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="project-card">
                     <div class="project-image" style="background-color: #2a2a2a;">
                         <video autoplay loop muted playsinline class="project-video">
-                            <source src="Sahm_Preview.mp4" type="video/mp4">
+                            <source src="Sahm_preview.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
