--- a/index.html
+++ b/index.html
@@ -174,7 +174,19 @@
             <div class="timeline-item">
                 <div class="timeline-content">
                     <div class="timeline-date">Trainee</div>
-                    <h3 class="lang-en">In Process...</h3>
+                    <h3 class="lang-en">Netways (Microsoft Partner)</h3>
+                    <h3 class="lang-en">3 Months</h3>
+                    <h3 class="lang-ar">مهندس برمجيات أول</h3>
+                    <br>
+                    <p class="lang-en"></p>
+                    <p class="lang-ar">قيادة مشاريع البنية التحتية السحابية ومبادرات الأمن</p>
+                </div>
+            </div>
+              <div class="timeline-item">
+                <div class="timeline-content">
+                    <div class="timeline-date">Business Analyst Trainee</div>
+                    <h3 class="lang-en">KAUST</h3>
+                    <h3 class="lang-en">3 Months</h3>
                     <h3 class="lang-ar">مهندس برمجيات أول</h3>
                     <br>
                     <p class="lang-en"></p>
