arabic switch fix

--- a/index.html
+++ b/index.html
@@ -17,17 +17,35 @@
         <nav>
             <div class="logo">NA</div>
             <div class="nav-links">
-                <a href="#about">About</a>
-                <a href="#skills">Skills</a>
-                <a href="#contact">Contact</a>
+                <a href="#about">
+                    <span class="lang-en">About</span>
+                    <span class="lang-ar">نبذة</span>
+                </a>
+                <a href="#skills">
+                    <span class="lang-en">Skills</span>
+                    <span class="lang-ar">المهارات</span>
+                </a>
+                <a href="#contact">
+                    <span class="lang-en">Contact</span>
+                    <span class="lang-ar">اتصل</span>
+                </a>
             </div>
         </nav>
 
         <section class="hero" id="about">
             <div class="hero-content">
-                <h1 class="animate">Hello, I'm Nawaf Al-Ageel</h1>
-                <p class="subtitle">Software Engineer | Cloud Architect | Cybersecurity Enthusiast</p>
-                <a href="#contact" class="btn">Get in Touch</a>
+                <h1 class="animate">
+                    <span class="lang-en">Hello, I'm Nawaf Al-Ageel</span>
+                    <span class="lang-ar">مرحباً، أنا نواف العقيل</span>
+                </h1>
+                <p class="subtitle">
+                    <span class="lang-en">Software Engineer | Cloud Architect | Cybersecurity Enthusiast</span>
+                    <span class="lang-ar">مهندس برمجيات | مهندس حلول سحابية | متحمس للأمن السيبراني</span>
+                </p>
+                <a href="#contact" class="btn">
+                    <span class="lang-en">Get in Touch</span>
+                    <span class="lang-ar">تواصل معي</span>
+                </a>
             </div>
             <div class="hero-image">
                 <div class="avatar-container">
@@ -39,23 +57,38 @@
         
 
         <section class="skills" id="skills">
-            <h2>My Expertise</h2>
+            <h2>
+                <span class="lang-en">My Expertise</span>
+                <span class="lang-ar">خبراتي</span>
+            </h2>
             <div class="skills-grid">
                 <div class="skill-card">
                     <i class="fas fa-cloud skill-icon"></i>
-                    <h3>Cloud Computing</h3>
+                    <h3>
+                        <span class="lang-en">Cloud Computing</span>
+                        <span class="lang-ar">الحوسبة السحابية</span>
+                    </h3>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-shield-alt skill-icon"></i>
-                    <h3>Cybersecurity</h3>
+                    <h3>
+                        <span class="lang-en">Cybersecurity</span>
+                        <span class="lang-ar">الأمن السيبراني</span>
+                    </h3>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-code skill-icon"></i>
-                    <h3>Software Development</h3>
+                    <h3>
+                        <span class="lang-en">Software Development</span>
+                        <span class="lang-ar">تطوير البرمجيات</span>
+                    </h3>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-server skill-icon"></i>
-                    <h3>DevOps</h3>
+                    <h3>
+                        <span class="lang-en">DevOps</span>
+                        <span class="lang-ar">ديف أوبس</span>
+                    </h3>
                 </div>
             </div>
         </section>
@@ -73,9 +106,9 @@
                     </div>
                     <div class="project-content">
                         <h3 class="lang-en">Sahm</h3>
-                        <h3 class="lang-ar">أتمتة البنية التحتية السحابية</h3>
+                        <h3 class="lang-ar">سهم</h3>
                         <p class="lang-en">Automated a highly available AWS infrastructure deployment</p>
-                        <p class="lang-ar">نشر تلقائي للبنية التحتية على AWS باستخدام Terraform و Ansible</p>
+                        <p class="lang-ar">نشر تلقائي للبنية التحتية على AWS عالية التوفر</p>
                         <div class="project-tech">
                             <span class="tech-tag">AWS</span>
                             <span class="tech-tag">Cloudformation</span>
@@ -93,9 +126,9 @@
                     </div>
                     <div class="project-content">
                         <h3 class="lang-en">Foodstate</h3>
-                        <h3 class="lang-ar">أتمتة البنية التحتية السحابية</h3>
+                        <h3 class="lang-ar">فود ستيت</h3>
                         <p class="lang-en">Built a Serverless Cost-efficient infrastructure on AWS</p>
-                        <p class="lang-ar">نشر تلقائي للبنية التحتية على AWS باستخدام Terraform و Ansible</p>
+                        <p class="lang-ar">بناء بنية تحتية بدون خوادم وفعالة من حيث التكلفة على AWS</p>
                         <div class="project-tech">
                             <span class="tech-tag">Serverless</span>
                             <span class="tech-tag">AWS Rekognition</span>
@@ -113,9 +146,9 @@
                     </div>
                     <div class="project-content">
                         <h3 class="lang-en">Misfah</h3>
-                        <h3 class="lang-ar">أتمتة البنية التحتية السحابية</h3>
+                        <h3 class="lang-ar">مصفاة</h3>
                         <p class="lang-en">AI-powered Social media filtering app for text and images</p>
-                        <p class="lang-ar">نشر تلقائي للبنية التحتية على AWS باستخدام Terraform و Ansible</p>
+                        <p class="lang-ar">تطبيق ذكي لتصفية وسائل التواصل الاجتماعي للنصوص والصور</p>
                         <div class="project-tech">
                             <span class="tech-tag">CNN Model</span>
                             <span class="tech-tag">BERT Model</span>
@@ -134,22 +167,31 @@
                     <div class="cert-header">
                         <i class="fab fa-aws cert-icon"></i>
                     </div>
-                    <h3>AWS Solutions Architect</h3>
+                    <h3>
+                        <span class="lang-en">AWS Solutions Architect</span>
+                        <span class="lang-ar">مهندس حلول AWS</span>
+                    </h3>
                     <br>
                     <p class="lang-en" style="color: #bbb;">Amazon Web Services</p>
                     <p class="lang-ar" style="color: #bbb;">أمازون ويب سيرفيسز</p>
                 </div>
                 <div class="cert-card">
                     <i><img src="tuwaiq_logo.png" style="width: 100px; margin-bottom: -20px;"></i>
-                    <h3>AWS SYSOPS with Tuwaiq</h3>
+                    <h3>
+                        <span class="lang-en">AWS SYSOPS with Tuwaiq</span>
+                        <span class="lang-ar">AWS SYSOPS مع طويق</span>
+                    </h3>
                     <br>
                     <!-- <h6>SY0-701</h6 style="padding-top: 0px;"> -->
                     <p class="lang-en" style="color: #bbb;">Tuwaiq Academy</p>
-                    <p class="lang-ar" style="color: #bbb;">كومبتيا</p>
+                    <p class="lang-ar" style="color: #bbb;">أكاديمية طويق</p>
                 </div>
                 <div class="cert-card">
                     <i class="fas fa-shield-alt cert-icon"></i>
-                    <h3>CompTIA Security+</h3>
+                    <h3>
+                        <span class="lang-en">CompTIA Security+</span>
+                        <span class="lang-ar">كومبتيا سيكيوريتي+</span>
+                    </h3>
                     <br>
                     <br>
                     <!-- <h6>SY0-701</h6 style="padding-top: 0px;"> -->
@@ -159,11 +201,14 @@
                
                 <div class="cert-card">
                     <i><img src="TryHackMe.png" style="width: 70px; margin-bottom: -20px;"></i>
-                    <h3>TryHackMe CyberSecurity 101</h3>
+                    <h3>
+                        <span class="lang-en">TryHackMe CyberSecurity 101</span>
+                        <span class="lang-ar">أساسيات الأمن السيبراني</span>
+                    </h3>
                     <br>
                     <!-- <h6>SY0-701</h6 style="padding-top: 0px;"> -->
                     <p class="lang-en" style="color: #bbb;">TryHackMe</p>
-                    <p class="lang-ar" style="color: #bbb;">كومبتيا</p>
+                    <p class="lang-ar" style="color: #bbb;">TryHackMe</p>
                 </div>
             </div>
         </section>
@@ -173,32 +218,46 @@
             <h2 class="lang-ar">الخبرات</h2>
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <div class="timeline-date">Trainee</div>
+                    <div class="timeline-date">
+                        <span class="lang-en">Trainee</span>
+                        <span class="lang-ar">متدرب</span>
+                    </div>
                     <h3 class="lang-en">Netways (Microsoft Partner)</h3>
-                    <h3 class="lang-en">3 Months</h3>
-                    <h3 class="lang-ar">مهندس برمجيات أول</h3>
+                    <h3 class="lang-ar">نيتويز (شريك مايكروسوفت)</h3>
+                    <p class="lang-en">3 Months</p>
+                    <p class="lang-ar">3 أشهر</p>
                     <br>
-                    <p class="lang-en"></p>
-                    <p class="lang-ar">قيادة مشاريع البنية التحتية السحابية ومبادرات الأمن</p>
+                    <p class="lang-en">Cloud infrastructure and security training program</p>
+                    <p class="lang-ar">برنامج تدريبي في البنية التحتية السحابية والأمن</p>
                 </div>
             </div>
               <div class="timeline-item">
                 <div class="timeline-content">
-                    <div class="timeline-date">Business Analyst Trainee</div>
+                    <div class="timeline-date">
+                        <span class="lang-en">Business Analyst Trainee</span>
+                        <span class="lang-ar">متدرب محلل أعمال</span>
+                    </div>
                     <h3 class="lang-en">KAUST</h3>
-                    <h3 class="lang-en">3 Months</h3>
-                    <h3 class="lang-ar">مهندس برمجيات أول</h3>
+                    <h3 class="lang-ar">جامعة الملك عبدالله للعلوم والتقنية</h3>
+                    <p class="lang-en">3 Months</p>
+                    <p class="lang-ar">3 أشهر</p>
                     <br>
-                    <p class="lang-en"></p>
-                    <p class="lang-ar">قيادة مشاريع البنية التحتية السحابية ومبادرات الأمن</p>
+                    <p class="lang-en">Business analysis and process optimization training</p>
+                    <p class="lang-ar">تدريب في تحليل الأعمال وتحسين العمليات</p>
                 </div>
             </div>
             <!-- Add more timeline items as needed -->
         </section>
 
         <section class="contact" id="contact">
-            <h2>Let's Connect</h2>
-            <p>I'm open for any question</p>
+            <h2>
+                <span class="lang-en">Let's Connect</span>
+                <span class="lang-ar">لنتواصل</span>
+            </h2>
+            <p>
+                <span class="lang-en">I'm open for any question</span>
+                <span class="lang-ar">أنا مفتوح لأي استفسار</span>
+            </p>
             <div class="social-links">
                 <a href="https://github.com/NawafAl-Ageel" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://medium.com/@nawafsoftwareeng" target="_blank"><i class="fab fa-medium"></i></a>
